--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </style>
 </head>
 <body>
+    <div class="wow fadeInUp">hahaha asndbmsadmasnbdnmsadbmasn</div>
     <section class="wow bounce" data-wow-duration="1s" data-wow-delay="3s" data-wow-iteration="5">đợi 3 giây</section>
         
     <div class="wow bounce">1</div>
